Update redirect URLs for Evinka Connect

--- a/redirect.html
+++ b/redirect.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <title>Redirigiendo...</title>
     <script>
-        // Coloca aquí los enlaces reales
-        const androidUrl = "https://play.google.com/store/apps/details?id=TU_APP";
-        const iosUrl = "https://apps.apple.com/app/idTU_APP";
-        const fallback = "https://tusitio.com";
+        // Enlaces reales de Evinka Connect
+        const androidUrl = "https://play.google.com/store/apps/details?id=teck.evinka.app.co";
+        const iosUrl = "https://apps.apple.com/co/app/evinka-connect-colombia/id6743364948";
+        const fallback = "https://hgamboa695-lang.github.io/Evinka-Connect-/";
 
         const user = navigator.userAgent.toLowerCase();
 
@@ -24,3 +24,4 @@
     Redirigiendo...
 </body>
 </html>
+
